--- a/index.html
+++ b/index.html
@@ -5,29 +5,32 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.1/gsap.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.8/ScrollMagic.min.js" integrity="sha512-8E3KZoPoZCD+1dgfqhPbejQBnQfBXe8FuwL4z/c8sTrgeDMFEnoyTlH3obB4/fV+6Sg0a0XF+L/6xS4Xx1fUEg==" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.8/plugins/animation.gsap.min.js" integrity="sha512-5/OHwmQzDSBS0Ous4/hlYoWLHd06/d2r7LdKZQVBXOA6PvOqWVXtdboiLTU7lQTGyVoKVTNkwi0ol4gHGlw5ww==" crossorigin="anonymous"></script>
-    <script src="/app.js"></script>
     <title>Document</title>
 </head>
 <body>
 
     <section class="title-section">
-        <h1>Scroll down</h1>
+        <h1>Scroll to section</h1>
       </section>
 
-   <section class="sticky">
-       <img id="sun" src="/sun.svg">
-       <img id="building-pink" src="/building-pink.svg">
-       <img id="building-blue" src="/blue-building.svg">
-       <img id="building-red" src="/red-building.svg">
-       <img id="building-brown" src="/brown-building.svg">
+   <section class="sticky-anim">
+       <img id="sun" src="/assets/sun.svg">
+       <img id="building-pink" src="/assets/building-pink.svg">
+       <img id="building-blue" src="/assets/blue-building.svg">
+       <img id="building-red" src="/assets/red-building.svg">
+       <img id="building-brown" src="/assets/brown-building.svg">
    </section> 
 
    <section class="title-section">
-    <h1>Scroll up</h1>
+    <h1>Scroll from section</h1>
   </section>
 
 </body>
+
+<footer>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.1/gsap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.8/ScrollMagic.min.js" integrity="sha512-8E3KZoPoZCD+1dgfqhPbejQBnQfBXe8FuwL4z/c8sTrgeDMFEnoyTlH3obB4/fV+6Sg0a0XF+L/6xS4Xx1fUEg==" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.8/plugins/animation.gsap.min.js" integrity="sha512-5/OHwmQzDSBS0Ous4/hlYoWLHd06/d2r7LdKZQVBXOA6PvOqWVXtdboiLTU7lQTGyVoKVTNkwi0ol4gHGlw5ww==" crossorigin="anonymous"></script>
+    <script src="app.js"></script>
+  </footer>
 </html>
